# JamboSpherePOS

./: .addline_state  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  jambo_sphere_pos.docx  manage.py  populate_db.py  pyproject.toml  reproduce_analytics.py  test_csrf.py  test_csrf2.py  test_csrf3.py  test_csrf_final.py  test_middlewares.py
JamboPOS/: asgi.py  settings.py  urls.py  wsgi.py
point_of_sale/: admin.py  apps.py  cart.py  forms.py  models.py  tests_performance.py  urls.py  views.py
point_of_sale/migrations/: 0001_initial.py  0002_alter_sale_total_amount_alter_saleitem_subtotal.py  0003_notification.py  0004_category_product_image_product_category.py  0005_sale_client_contact_sale_client_name_sale_notes_and_more.py
static/js/: offline-sync.js  serviceworker.js
templates/: base.html
templates/auth/: login.html  signup.html
templates/pos/: analytics.html  cart.html  category_edit.html  dashboard.html  notifications.html  product_edit.html  products.html  receipt.html  reports_daily.html  sales.html  settings.html
templates/pos/partials/: analytics_summary.html  cart_count.html  category_list.html  daily_summary_detail.html  live_receipt.html  product_row.html  product_row_dashboard.html  sale_row.html  sale_row_dashboard.html  sidebar.html  today_totals.html
