[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jambopos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "django-pwa>=2.0.1",
    "gunicorn>=22.0.0",
    "pillow>=12.2.0",
]

[tool.setuptools]
packages = ["JamboPOS", "point_of_sale"]
